Fixed text-decoration issue on mobile

--- a/the-tipping-point/main.css
+++ b/the-tipping-point/main.css
@@ -48,6 +48,11 @@ body {
   overflow: hidden;
 }
 
+.button:hover {
+  text-decoration: none;
+  color: black;
+}
+
 .white {
   background: white;
   border-radius: 15px 15px 0 0;
@@ -59,8 +64,6 @@ body {
 
 @media (hover:hover) {
   .button:hover {
-    text-decoration: none;
-    color: black;
     box-shadow: inset 0 0 0 3000px rgba(255, 255, 255, 1);
     transition: .5s;
   }
